2010-09-01  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Darin Adler.

        DOM Selection: collapseToStart() and collapseToEnd() should throw INVALID_STATE_ERR if there's no selection
        https://bugs.webkit.org/show_bug.cgi?id=44598

        Spec links:
        http://www.whatwg.org/specs/web-apps/current-work/#dom-selection-collapsetostart
        http://www.whatwg.org/specs/web-apps/current-work/#dom-selection-collapsetoend

        Test: fast/dom/Selection/collapseToX-empty-selection.html

        * page/DOMSelection.cpp:
        (WebCore::DOMSelection::collapseToEnd):
        (WebCore::DOMSelection::collapseToStart):
        * page/DOMSelection.h:
        * page/DOMSelection.idl:
2010-09-01  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Darin Adler.

        DOM Selection: collapseToStart() and collapseToEnd() should throw INVALID_STATE_ERR if there's no selection
        https://bugs.webkit.org/show_bug.cgi?id=44598

        Spec links:
        http://www.whatwg.org/specs/web-apps/current-work/#dom-selection-collapsetostart
        http://www.whatwg.org/specs/web-apps/current-work/#dom-selection-collapsetoend

        * fast/dom/Selection/collapseToX-empty-selection-expected.txt: Added.
        * fast/dom/Selection/collapseToX-empty-selection.html: Added.
        * fast/dom/Selection/script-tests/collapseToX-empty-selection.js: Added.


Canonical link: https://commits.webkit.org/57350@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66590 268f45cc-cd09-0410-ab3c-d52691b4dbfc